--- a/tracking.html
+++ b/tracking.html
@@ -36,7 +36,7 @@
         .map {
             width: 80%;
             height: 300px;
-            background: url('https://i.imgur.com/lXbnzE2.gif') center center no-repeat;
+            background: url('https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExeHJyNGR1NHc4bjlhd3oyOWk2OWV6enE1a2R5dHVvend5OHo4bW92cyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3og0ILLVvPp8d64Jd6/giphy.gif') center center no-repeat;
             background-size: cover;
             margin: 30px auto;
             border: 3px solid red;
